feat: Render drum type to display div

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
   
   <div class="drum-machine">
-    <div class="drum-pad" id="audio-clap" data-key="81">Q</div>
-    <div class="drum-pad" id="audio-hihat" data-key="87">W</div>
-    <div class="drum-pad" id="audio-kick" data-key="69">E</div>
-    <div class="drum-pad" id="audio-openhat" data-key="65">A</div>
-    <div class="drum-pad" id="audio-boom" data-key="83">S</div>
-    <div class="drum-pad" id="audio-ride" data-key="68">D</div>
-    <div class="drum-pad" id="audio-snare" data-key="90">Z</div>
-    <div class="drum-pad" id="audio-tom" data-key="88">X</div>
-    <div class="drum-pad" id="audio-tink" data-key="67">C</div>
+    <div class="drum-pad" id="Clap" data-key="81">Q</div>
+    <div class="drum-pad" id="Hihat" data-key="87">W</div>
+    <div class="drum-pad" id="Kick" data-key="69">E</div>
+    <div class="drum-pad" id="Openhat" data-key="65">A</div>
+    <div class="drum-pad" id="Boom" data-key="83">S</div>
+    <div class="drum-pad" id="Ride" data-key="68">D</div>
+    <div class="drum-pad" id="Snare" data-key="90">Z</div>
+    <div class="drum-pad" id="Tom" data-key="88">X</div>
+    <div class="drum-pad" id="Tink" data-key="67">C</div>
 
     <div id="display"></div>
 
