--- a/index.html
+++ b/index.html
@@ -8,17 +8,18 @@
 <body>
   
   <div class="drum-machine">
-    <div class="drum-pad" id="Clap" data-key="81">Q</div>
-    <div class="drum-pad" id="Hihat" data-key="87">W</div>
-    <div class="drum-pad" id="Kick" data-key="69">E</div>
-    <div class="drum-pad" id="Openhat" data-key="65">A</div>
-    <div class="drum-pad" id="Boom" data-key="83">S</div>
-    <div class="drum-pad" id="Ride" data-key="68">D</div>
-    <div class="drum-pad" id="Snare" data-key="90">Z</div>
-    <div class="drum-pad" id="Tom" data-key="88">X</div>
-    <div class="drum-pad" id="Tink" data-key="67">C</div>
-
-    <div id="display"></div>
+    <div>    
+      <div class="drum-pad" id="Clap" data-key="81">Q</div>
+      <div class="drum-pad" id="Hihat" data-key="87">W</div>
+      <div class="drum-pad" id="Kick" data-key="69">E</div>
+      <div class="drum-pad" id="Openhat" data-key="65">A</div>
+      <div class="drum-pad" id="Boom" data-key="83">S</div>
+      <div class="drum-pad" id="Ride" data-key="68">D</div>
+      <div class="drum-pad" id="Snare" data-key="90">Z</div>
+      <div class="drum-pad" id="Tom" data-key="88">X</div>
+      <div class="drum-pad" id="Tink" data-key="67">C</div>
+      <div id="display"></div>
+    </div>
 
     <audio data-key="81" src="sounds/clap.wav"></audio>
     <audio data-key="87" src="sounds/hihat.wav"></audio>
