refactor: Use dataset selector for drum text display

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
   
   <div class="drum-machine">
     <div>    
-      <div class="drum-pad" id="Clap" data-key="81">Q</div>
-      <div class="drum-pad" id="Hihat" data-key="87">W</div>
-      <div class="drum-pad" id="Kick" data-key="69">E</div>
-      <div class="drum-pad" id="Openhat" data-key="65">A</div>
-      <div class="drum-pad" id="Boom" data-key="83">S</div>
-      <div class="drum-pad" id="Ride" data-key="68">D</div>
-      <div class="drum-pad" id="Snare" data-key="90">Z</div>
-      <div class="drum-pad" id="Tom" data-key="88">X</div>
-      <div class="drum-pad" id="Tink" data-key="67">C</div>
+      <div class="drum-pad" id="Clap" data-drum="Clap" data-key="81">Q</div>
+      <div class="drum-pad" id="Hihat" data-drum="Hihat" data-key="87">W</div>
+      <div class="drum-pad" id="Kick" data-drum="Kick" data-key="69">E</div>
+      <div class="drum-pad" id="Openhat" data-drum="Openhat" data-key="65">A</div>
+      <div class="drum-pad" id="Boom" data-drum="Boom" data-key="83">S</div>
+      <div class="drum-pad" id="Ride" data-drum="Ride" data-key="68">D</div>
+      <div class="drum-pad" id="Snare" data-drum="Snare" data-key="90">Z</div>
+      <div class="drum-pad" id="Tom" data-drum="Tom" data-key="88">X</div>
+      <div class="drum-pad" id="Tink" data-drum="Tink" data-key="67">C</div>
       <div id="display"></div>
     </div>
 
